# fiz-math

./: .travis.yml  Cargo.toml  LICENSE  README.md  circle.yml
src/: clamp.rs  coordsys.rs  dot.rs  eq.rs  float.rs  length.rs  lib.rs  unit.rs  unit_macro.rs  vec.rs  vec2.rs  vec3.rs  vec4.rs
src/unit/: cm.rs  deg.rs  km.rs  m.rs  mm.rs  mod.rs  rad.rs
